kirjautumis toiminnon tekeminen aloitettu, luotu osa admin puolen tiedostoista

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/jsp/admin/kirjautuminen.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/frontpage.jsp=UTF-8
 encoding/<project>=UTF-8
